# netra-sdk-py

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cz.toml  pyproject.toml  pytest.ini  setup_dev.sh
.github/workflows/: code-quality.yml  detailed-code-checks.yml  publish.yml
combat/: __init__.py  config.py  decorators.py  flair_recognizer.py  input_scanner.py  pii.py  scanner.py  session.py  span_aggregation.py  span_processor.py  tracer.py
combat/exceptions/: __init__.py  injection.py  pii.py
examples/: README.md  basic_initialization.py  injection_scanning.py  integrated_example.py  llm_tracing.py  pii_detection.py
examples/01_basic_setup/: basic_initialization.py
examples/02_decorators/: class_decorators.py  function_decorators.py
netra/: __init__.py  anonymizer.py  client.py  config.py  custom_instrumentation.py  decorators.py  input_scanner.py  instrumentation.py  meter.py  pii.py  scanner.py  session.py  session_manager.py  span_aggregation.py  span_processor.py  span_wrapper.py  tracer.py  version.py
tests/: README.md  __init__.py  conftest.py  test_aiohttp_instrumentation.py  test_anonymizer.py  test_anonymizer_base.py  test_cohere_instrumentation.py  test_decorators.py  test_error_detection_processor.py  test_fastapi_instrumentation.py  test_fp_anonymizer.py  test_google_genai_instrumentation.py  test_httpx_instrumentation.py  test_input_scanner.py  test_litellm_instrumentation.py  test_mistralai_instrumentation.py  test_netra_init.py  test_openai_instrumentation.py  test_pii.py  test_scrubbing_span_processor.py  test_session.py  test_session_manager.py  test_session_span_processor.py  test_span_aggregation_processor.py  test_span_wrapper.py  test_tracer.py  test_weaviate_instrumentation.py
(+103 files in other folders)
